--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/stack": "^7.0.14",
+    "axios": "^1.7.8",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-webview": "^13.12.4"
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-stack": "^1.0.0-alpha11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
